Fixed index cards bottom blue line

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,26 @@
 {{>_heroImage}}
 <div class="sm:flex sm:flex-col md:flex md:flex-row md:justify-between ">
 
-    <div class ="cardLayout md:w-1/4 text-center border border-gray shadow-xl m-5 font-bold ">
+    <div class ="cardLayout md:w-1/4 text-center border border-gray shadow-xl m-5 font-bold relative ">
     <h2 class="text-2xl py-1 bg-blue-500">Security</h2>
     <img src="/Images/Bullet.jpg" alt="CCTV Camera" class="border border-none">
     <hr  class="border border-b-2">
     <p class=" text-xl mt-5 mb-8 ">High Quality Security Systems Watching Over Your Family</p>
-    <div class="bg-blue-500 p-4"></div>
+    <div class="bg-blue-500  p-2 absolute bottom-0 w-full"></div>
     </div>
-    <div class ="sm: m-10 cardLayout md:w-1/4 text-center border border-gray shadow-xl md:m-5 font-bold ">
+    <div class ="sm: m-10 cardLayout md:w-1/4 text-center border border-gray shadow-xl md:m-5 font-bold relative ">
     <h2 class="text-2xl py-1 bg-blue-500">Affordablity</h2>
     <img src="/Images/PiggyBank.jpg" alt="A Piggy Bank" class="border border-none">
     <hr  class="border border-b-2">
     <p class=" text-xl mt-5 mb-8 ">Keep your family safe without breaking the bank</p>
-    <div class="bg-blue-500 p-4"></div>
+    <div class="bg-blue-500  p-2 absolute bottom-0 w-full"></div>
     </div>
-    <div class ="cardLayout md:w-1/4 text-center border border-gray shadow-xl m-5 font-bold ">
+    <div class ="cardLayout md:w-1/4 text-center border border-gray shadow-xl m-5 font-bold relative">
     <h2 class="text-2xl py-1 bg-blue-500">Professionalism</h2>
     <img src="/Images/HandShake.jpg" alt="two men Shaking hands" class="border border-none">
     <hr  class="border border-b-2">
     <p class=" text-xl mt-5 mb-8 ">High Quality Customer Support At A Moments Notice</p>
-    <div class="bg-blue-500 p-4"></div>
+    <div class="bg-blue-500 p-2 absolute bottom-0 w-full"></div>
 </div>
 </div>
 
